--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "~2.1.0",
     "@angular/router": "~3.1.0",
     "core-js": "^2.4.1",
-    "devextreme-angular": "^16.2.1-alpha.1",
+    "devextreme-angular": "^16.2.2-beta.1",
     "jquery": "^3.1.1",
     "jszip": "^3.1.3",
     "rxjs": "5.0.0-beta.12",
