--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "~2.1.0",
-    "@angular/compiler": "~2.1.0",
-    "@angular/core": "~2.1.0",
-    "@angular/forms": "~2.1.0",
-    "@angular/http": "~2.1.0",
-    "@angular/platform-browser": "~2.1.0",
-    "@angular/platform-browser-dynamic": "~2.1.0",
-    "@angular/router": "~3.1.0",
+    "@angular/common": "~2.4.3",
+    "@angular/compiler": "~2.4.3",
+    "@angular/core": "~2.4.3",
+    "@angular/forms": "~2.4.3",
+    "@angular/http": "~2.4.3",
+    "@angular/platform-browser": "~2.4.3",
+    "@angular/platform-browser-dynamic": "~2.4.3",
+    "@angular/router": "~3.4.0",
     "core-js": "^2.4.1",
-    "devextreme": "^16.2.3",
-    "devextreme-angular": "^16.2.3-rc.2",
+    "devextreme": "~16.2.4-0",
+    "devextreme-angular": "~16.2.3-rc.4",
     "jquery": "^3.1.1",
     "jszip": "^3.1.3",
     "rxjs": "5.0.0-beta.12",
