--- a/package.json
+++ b/package.json
@@ -19,30 +19,29 @@
     "@angular/http": "~2.4.3",
     "@angular/platform-browser": "~2.4.3",
     "@angular/platform-browser-dynamic": "~2.4.3",
-    "@angular/router": "~3.4.0",
+    "@angular/router": "~3.4.3",
     "core-js": "^2.4.1",
     "devextreme": "~16.2.4-0",
     "devextreme-angular": "~16.2.3-rc.4",
-    "jquery": "^3.1.1",
-    "jszip": "^3.1.3",
-    "rxjs": "5.0.0-beta.12",
-    "ts-helpers": "^1.1.1",
-    "typings": "^1.5.0",
-    "zone.js": "^0.6.23"
+    "jquery": "~3.1.1",
+    "rxjs": "~5.0.1",
+    "ts-helpers": "~1.1.1",
+    "typings": "~1.5.0",
+    "zone.js": "~0.7.2"
   },
   "devDependencies": {
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.19-3",
+    "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "1.0.0-beta.1",
-    "jasmine-core": "2.4.1",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
+    "jasmine-core": "^2.5.2",
+    "jasmine-spec-reporter": "^3.2.0",
+    "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^1.1.0",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "4.0.9",
+    "protractor": "^5.0.0",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
     "typescript": "~2.0.3",
