--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dx-election",
   "version": "0.9.0",
-  "description": "DX Election: Angular 2 and DevExtreme sample application",
+  "description": "DX Election: Angular and DevExtreme sample application",
   "angular-cli": {},
   "scripts": {
     "start": "ng serve",
