--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
-    "devextreme": "17.2",
-    "devextreme-angular": "17.2",
+    "devextreme": "18.1-unstable",
+    "devextreme-angular": "18.1-unstable",
     "jquery": "~3.1.1",
     "rxjs": "^5.5.6",
     "ts-helpers": "~1.1.1",
