--- a/package.json
+++ b/package.json
@@ -12,42 +12,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/common": "^8.0.0",
-    "@angular/compiler": "^8.0.0",
-    "@angular/core": "^8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "^8.0.0",
-    "@angular/platform-browser-dynamic": "^8.0.0",
-    "@angular/router": "^8.0.0",
-    "core-js": "^2.4.1",
+    "@angular/animations": "^9.1.7",
+    "@angular/common": "^9.1.7",
+    "@angular/compiler": "^9.1.7",
+    "@angular/core": "^9.1.7",
+    "@angular/forms": "^9.1.7",
+    "@angular/platform-browser": "^9.1.7",
+    "@angular/platform-browser-dynamic": "^9.1.7",
+    "@angular/router": "^9.1.7",
     "devextreme": "^19.2.3",
     "devextreme-angular": "^19.2.3",
-    "rxjs": "^6.1.0",
-    "ts-helpers": "^1.1.2",
-    "typings": "^2.1.1",
-    "zone.js": "^0.8.26"
+    "rxjs": "^6.5.4",
+    "tslib": "^1.10.0",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular/cli": "^8.0.0",
-    "@angular/compiler-cli": "^8.0.0",
-    "@angular/language-service": "^8.0.0",
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@types/jasmine": "^2.8.7",
-    "@types/jasminewd2": "^2.0.3",
-    "@types/node": "^10.1.2",
-    "codelyzer": "^4.3.0",
-    "jasmine-core": "^3.1.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.2",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.0",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.1.0",
-    "protractor": "^5.3.2",
-    "ts-node": "^6.0.3",
-    "tslint": "^5.10.0",
-    "typescript": "~3.4.1"
+    "@angular-devkit/build-angular": "^0.901.6",
+    "@angular/cli": "^9.1.6",
+    "@angular/compiler-cli": "^9.1.7",
+    "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
   }
 }
